eks-istio-demo/k8s/routing.yaml
# Example VirtualService to split traffic between v1 and v2 of reviews service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-split
  namespace: demo
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 50
    - destination:
        host: reviews
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-destination
  namespace: demo
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
